# TSSort

./: README.md  mle5.py  pyproject.toml  pyvenv.cfg  xbox.py
sample_data/: comparisons.txt  sentences.txt
tssort/: __main__.py  pairwise_ranking.py
